docs: sync agent instructions